fixed toc title too long overflowing out of the box

--- a/source/css/obsidian.styl
+++ b/source/css/obsidian.styl
@@ -1818,7 +1818,7 @@ h1.title {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        width: 100%;
+        width: calc(100% - 1rem);
         padding: 0.1rem 0 0 1rem;
         span {
           display: flex;
@@ -1829,6 +1829,7 @@ h1.title {
           color: #9e9e9e;
           font-size: inherit;
           padding: 0 0.2rem;
+          word-wrap: break-word;
           &:nth-of-type(2) {
             flex-grow: 2;
           }
@@ -1836,14 +1837,16 @@ h1.title {
       }
 
       .toc-child {
-        width: 100%;
+        width: calc(100% - 1rem);
         flex-direction: column;
+        flex-wrap: wrap;
         list-style-type: none;
         margin-block-start: 0;
         margin-block-end: 0;
         margin-inline-start: 0;
         margin-inline-end: 0;
-        padding-inline-start: 1.5rem;
+        padding-inline-start: 0;
+        margin-left: 1rem;
         display: none;
         transition: height 400ms ease-in-out;
       }
